remove trigger helpers add styling for mobile WARRANTY

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2304,6 +2304,11 @@ body.skyfull
 		margin-bottom: -3%;
 	}
 }
+@media (max-width: 767px) {
+	#_Products #specifications {
+		margin-bottom: 5%;
+	}
+}
 
 .hide_products,
 .show_wireframe {
