--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2286,22 +2286,28 @@ body.skyfull
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: -3%;
+	/*margin-bottom: -3%; // turn on when scrolling */
+	margin-bottom: 0;
 }
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 #_Products #specifications {
-	margin-top: 130vh;
+	/*margin-top: 130vh; // turn on when scrolling */
+	margin-top: -10%;
 	margin-bottom: 0;
 }}
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 #_Products #specifications {
-	margin-top: 130vh;
-	margin-bottom: -3%;
+	/*margin-top: 130vh; // turn on when scrolling */
+	margin-top: -10%;
+	/*margin-bottom: -3%; // turn on when scrolling */
+	margin-bottom: 0;
 }}
 @media (min-width: 1025px) {
 	#_Products #specifications {
-		margin-top: 130vh;
-		margin-bottom: -3%;
+	/*margin-top: 130vh; // turn on when scrolling */
+		margin-top: -10%;
+	/*margin-bottom: -3%; // turn on when scrolling */
+		margin-bottom: 0;
 	}
 }
 @media (max-width: 767px) {
