--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2305,13 +2305,17 @@ body.skyfull
 @media (min-width: 1025px) {
 	#_Products #specifications {
 		/*margin-top: 130vh; // turn on when scrolling */
-		margin-top: -10%;
+		margin-top: 8%;
 		/*margin-bottom: -3%; // turn on when scrolling */
 		margin-bottom: 0;
-
-		/* below styles are for when scrollMagic is turned OFF */
-		position: relative;
-		top: 15%;
+	}
+}
+@media (min-width: 1367px) {
+	#_Products #specifications {
+		/*margin-top: 130vh; // turn on when scrolling */
+		margin-top: 0;
+		/*margin-bottom: -3%; // turn on when scrolling */
+		margin-bottom: 0;
 	}
 }
 @media (max-width: 767px) {
