added spacing for about text @ 800x600

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2469,7 +2469,8 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
-		margin-top: 150px;
+		/*margin-top: 150px; // turn back on when using scrollMagic */
+		margin-top: 200px;
 	}
 
 	#_Products .product-shots.default,
