--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2259,6 +2259,13 @@ body.skyfull
 			}
 		}
 
+		#_Products #specifications {
+			position: relative;
+			&.fixed {
+				position: fixed;
+			}
+		}
+
 		#_Products #productDescription.container-fluid {
 			opacity: 1;
 			margin-bottom: 50px;
