gay padding problems

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2254,8 +2254,10 @@ body.skyfull
 
 		#_Products #productContainer.container-fluid {
 			position: absolute;
+			padding-right: 30px;
 			&.fixed {
 				position: fixed;
+				padding-right: 15px;
 			}
 		}
 
