revert back to old scrollMagic

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2254,19 +2254,17 @@ body.skyfull
 
 		#_Products #productContainer.container-fluid {
 			position: absolute;
-			padding-right: 30px;
 			&.fixed {
 				position: fixed;
-				padding-right: 15px;
 			}
 		}
 
-		#_Products #specifications {
+/*		#_Products #specifications {
 			position: relative;
 			&.fixed {
 				position: fixed;
 			}
-		}
+		}*/
 
 		#_Products #productDescription.container-fluid {
 			opacity: 1;
@@ -2295,36 +2293,36 @@ body.skyfull
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	/*margin-bottom: -3%; // turn on when scrolling */
-	margin-bottom: 0;
+	margin-bottom: -3%; // turn on when scrolling 
+	/*margin-bottom: 0;*/
 }
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 #_Products #specifications {
-	/*margin-top: 130vh; // turn on when scrolling */
-	margin-top: -10%;
+	margin-top: 130vh; // turn on when scrolling 
+	/*margin-top: -10%;*/
 	margin-bottom: 0;
 }}
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 #_Products #specifications {
-	/*margin-top: 130vh; // turn on when scrolling */
-	margin-top: -5%;
-	/*margin-bottom: -3%; // turn on when scrolling */
-	margin-bottom: 0;
+	margin-top: 130vh; // turn on when scrolling 
+	/*margin-top: -5%;*/
+	margin-bottom: -3%; // turn on when scrolling 
+	/*margin-bottom: 0;*/
 }}
 @media (min-width: 1025px) {
 	#_Products #specifications {
-		/*margin-top: 130vh; // turn on when scrolling */
-		margin-top: -8%;
-		/*margin-bottom: -3%; // turn on when scrolling */
-		margin-bottom: 0;
+		margin-top: 130vh; // turn on when scrolling 
+		/*margin-top: -8%;*/
+		margin-bottom: -3%; // turn on when scrolling 
+		/*margin-bottom: 0;*/
 	}
 }
 @media (min-width: 1367px) {
 	#_Products #specifications {
-		/*margin-top: 130vh; // turn on when scrolling */
-		margin-top: 0;
-		/*margin-bottom: -3%; // turn on when scrolling */
-		margin-bottom: 0;
+		margin-top: 130vh; // turn on when scrolling 
+		/*margin-top: 0;*/
+		margin-bottom: -3%; // turn on when scrolling 
+		/*margin-bottom: 0;*/
 	}
 }
 @media (max-width: 767px) {
@@ -2490,12 +2488,12 @@ body.skyfull
 
 	#_Products #productDescription.container-fluid.notVisible,
 	#_Products #productDescription.container-fluid {
-		/*visibility: hidden; // turn on when scrolling */
+		visibility: hidden; // turn on when scrolling 
 	}
 
 	#_Products #specifications {
-		/*margin-bottom: -3%; // turn on when scrolling */
-		margin-bottom: 0%;
+		margin-bottom: -3%; // turn on when scrolling 
+		/*margin-bottom: 0%;*/
 	}
 }
 
