remove margin-top from specs/warranty

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2298,21 +2298,21 @@ body.skyfull
 }
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 #_Products #specifications {
-	margin-top: 130vh; // turn on when scrolling 
-	/*margin-top: -10%;*/
+	/*margin-top: 130vh; // turn on when scrolling */
+	margin-top: -10%;
 	margin-bottom: 0;
 }}
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 #_Products #specifications {
-	margin-top: 130vh; // turn on when scrolling 
-	/*margin-top: -5%;*/
+	/*margin-top: 130vh; // turn on when scrolling */
+	margin-top: -5%;
 	margin-bottom: -3%; // turn on when scrolling 
 	/*margin-bottom: 0;*/
 }}
 @media (min-width: 1025px) {
 	#_Products #specifications {
-		margin-top: 130vh; // turn on when scrolling 
-		/*margin-top: -8%;*/
+		/*margin-top: 130vh; // turn on when scrolling */
+		margin-top: -8%;
 		margin-bottom: -3%; // turn on when scrolling 
 		/*margin-bottom: 0;*/
 	}
