--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2319,8 +2319,8 @@ body.skyfull
 }
 @media (min-width: 1367px) {
 	#_Products #specifications {
-		margin-top: 130vh; // turn on when scrolling 
-		/*margin-top: 0;*/
+		/*margin-top: 130vh; // turn on when scrolling */
+		margin-top: 0;
 		margin-bottom: -3%; // turn on when scrolling 
 		/*margin-bottom: 0;*/
 	}
