visibility turned on @ narrow screens

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2488,7 +2488,7 @@ body.skyfull
 
 	#_Products #productDescription.container-fluid.notVisible,
 	#_Products #productDescription.container-fluid {
-		visibility: hidden; // turn on when scrolling 
+		/*visibility: hidden; // turn on when scrolling */
 	}
 
 	#_Products #specifications {
