--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2513,6 +2513,12 @@ body.skyfull
 	display: none;
 }
 
+@media (min-width: 768px) {
+	.about_product p {
+		font-size: 18px;
+	}
+}
+
 } //body
 
 // new 6 Oct //
