--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2316,12 +2316,16 @@ body.skyfull
 		margin-bottom: -3%; // turn on when scrolling 
 		/*margin-bottom: 0;*/
 	}
+
+	#_Products #productDescription {
+		margin-top: 400px;
+	}
 }
 @media (min-width: 1367px) {
 	#_Products #specifications {
 		/*margin-top: 130vh; // turn on when scrolling */
 		margin-top: 0;
-		margin-bottom: -3%; // turn on when scrolling 
+		margin-bottom: -2%; // turn on when scrolling 
 		/*margin-bottom: 0;*/
 	}
 }
@@ -2489,7 +2493,7 @@ body.skyfull
 		margin-top: 200px;
 	}
 
-	#_Products .product-shots.default,
+	#_Products .product-shots.default, 
 	.wireframe_shots, 
 	#wf_grid {
 		min-height: 300px;
