--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2316,17 +2316,16 @@ body.skyfull
 		margin-bottom: -3%; // turn on when scrolling 
 		/*margin-bottom: 0;*/
 	}
-
-	#_Products #productDescription {
-		margin-top: 400px;
-	}
 }
 @media (min-width: 1367px) {
 	#_Products #specifications {
 		/*margin-top: 130vh; // turn on when scrolling */
 		margin-top: 0;
-		margin-bottom: -2%; // turn on when scrolling 
-		/*margin-bottom: 0;*/
+		margin-bottom: 0;
+	}
+
+	#_Products #productDescription {
+		margin-top: 400px;
 	}
 }
 @media (max-width: 767px) {
