text margin and spacing

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2179,7 +2179,7 @@ body.skyfull
 
 		#_Products #productDescription.container-fluid,
 		#_Products #productDescription.container-fluid.notVisible {
-			margin-top: 30vh;
+			margin-top: 35vh;
 		}
 	}
 
@@ -2191,7 +2191,7 @@ body.skyfull
 		}
 
 		#_Products #productDescription.container-fluid {
-			margin-top: 300px;
+			margin-top: 400px;
 			margin-bottom: 0;
 		}
 
@@ -2313,7 +2313,7 @@ body.skyfull
 	#_Products #specifications {
 		/*margin-top: 130vh; // turn on when scrolling */
 		margin-top: -8%;
-		margin-bottom: -3%; // turn on when scrolling 
+		margin-bottom: 1%; // turn on when scrolling 
 		/*margin-bottom: 0;*/
 	}
 }
@@ -2324,7 +2324,7 @@ body.skyfull
 		margin-bottom: 0;
 	}
 
-	#_Products #productDescription {
+	#_Products #productDescription.container-fluid {
 		margin-top: 400px;
 	}
 }
