add a min-height to specs

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2288,6 +2288,7 @@ body.skyfull
 
 /* --------------------------------------------------- Test ---------------------------------------------------------- */
 #_Products #specifications {
+	min-height: 248px;
 	margin-top: -50px;
 	padding-bottom: 20px;
 	margin-left: 15px;
