about text line height reduce odd window where about text has excess margin top

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1741,7 +1741,7 @@ body.skyfull
 
 		#_Products #productDescription.container-fluid {
 			position: relative;
-			margin-top: 670px;
+			margin-top: 470px;
 			margin-bottom: 50px;
 		}
 	}
@@ -2435,6 +2435,7 @@ body.skyfull
 	.about_product p {
 		font-size: 18px;
 		color: #b1b1b1;
+		line-height: 120%;
 	}
 }
 
