--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2158,19 +2158,6 @@ body.skyfull
 	@media only screen and 
 	(min-width: 768px) and 
 	(max-width: 1366px) and 
-	(orientation: portrait) {
-		#_Products #productSelectContainer.container-fluid {
-			margin-top: 80px;
-		}
-
-		#_Products #productDescription.container-fluid {
-			margin-top: 450px;
-		}
-	}
-
-	@media only screen and 
-	(min-width: 768px) and 
-	(max-width: 1366px) and 
 	(max-height: 950px) and 
 	(orientation: landscape) {
 		#_Products #productSelectContainer.container-fluid {
@@ -2520,6 +2507,20 @@ body.skyfull
 @media only screen and (max-width: 1919px) and (min-width: 1367px) and (max-height: 650px) {
 	#_Products #productDescription.container-fluid {
 		margin-top: 200px;
+	}
+}
+
+@media only screen and 
+(min-width: 768px) and 
+(max-width: 1366px) and 
+(orientation: portrait) {
+	#_Products #productSelectContainer.container-fluid {
+		margin-top: 80px;
+	}
+
+	#_Products #productDescription.container-fluid {
+		margin-top: 550px;
+		margin-bottom: 300px;
 	}
 }
 
