--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1462,8 +1462,10 @@ body.skyfull
 
 	#_Products #productDescription.container-fluid {
 		position: relative;
-		margin-top: 20px;
-		margin-bottom: 30px;
+		margin-top: 20vh;
+		margin-bottom: 20vh;
+		/*margin-top: 20px;*/
+		/*margin-bottom: 30px;*/
 	}
 
 	.specs_title {
@@ -1682,7 +1684,7 @@ body.skyfull
 		#_Products #productDescription.container-fluid {
 			bottom: 40px;
 			position: relative;
-			margin-top: 60px;
+			/*margin-top: 60px;*/
 		}
 	}
 
@@ -1741,8 +1743,8 @@ body.skyfull
 
 		#_Products #productDescription.container-fluid {
 			position: relative;
-			margin-top: 470px;
-			margin-bottom: 50px;
+			/*margin-top: 470px;*/
+			/*margin-bottom: 50px;*/
 		}
 	}
 
@@ -1784,7 +1786,7 @@ body.skyfull
 		}
 
 		#_Products #productDescription.container-fluid{
-	    margin-top: 720px;
+	    /*margin-top: 720px;*/
 		}
 		#_Products #productContainer.container-fluid {
 			// margin-top: 0;
@@ -2166,7 +2168,7 @@ body.skyfull
 
 		#_Products #productDescription.container-fluid,
 		#_Products #productDescription.container-fluid.notVisible {
-			margin-top: 35vh;
+			/*margin-top: 35vh;*/
 		}
 	}
 
@@ -2178,8 +2180,8 @@ body.skyfull
 		}
 
 		#_Products #productDescription.container-fluid {
-			margin-top: 400px;
-			margin-bottom: 0;
+			/*margin-top: 400px;*/
+			/*margin-bottom: 0;*/
 		}
 
 		.about_product {
@@ -2195,8 +2197,8 @@ body.skyfull
 		}
 
 		#_Products #productDescription.container-fluid {
-			margin-top: 400px;
-			margin-bottom: 0;
+			/*margin-top: 400px;*/
+			/*margin-bottom: 0;*/
 		}
 
 		.about_product {
@@ -2211,8 +2213,8 @@ body.skyfull
 		}
 
 		#_Products #productDescription.container-fluid {
-			margin-top: 800px;
-			margin-bottom: 0;
+			/*margin-top: 800px;*/
+			/*margin-bottom: 0;*/
 		}
 
 		.about_product {
@@ -2255,7 +2257,7 @@ body.skyfull
 
 		#_Products #productDescription.container-fluid {
 			opacity: 1;
-			margin-bottom: 50px;
+			/*margin-bottom: 50px;*/
 			position: relative;
 			-webkit-transition: opacity 1s ease-in-out;
 			-moz-transition: opacity 1s ease-in-out;
@@ -2263,7 +2265,7 @@ body.skyfull
 			transition: opacity 1s ease-in-out;
 			&.notVisible {
 				opacity: 0;
-				margin-bottom: 50px;
+				/*margin-bottom: 50px;*/
 				position: relative;
 				-webkit-transition: opacity 1s ease-in-out;
 				-moz-transition: opacity 1s ease-in-out;
@@ -2277,12 +2279,11 @@ body.skyfull
 #_Products #specifications {
 	min-height: 300px;
 	margin-top: -50px;
-	padding-bottom: 20px;
+	padding-bottom: 5vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: -3%; // turn on when scrolling 
-	/*margin-bottom: 0;*/
+	margin-bottom: 0;
 }
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 #_Products #specifications {
@@ -2294,15 +2295,15 @@ body.skyfull
 #_Products #specifications {
 	/*margin-top: 130vh; // turn on when scrolling */
 	margin-top: -5%;
-	margin-bottom: -3%; // turn on when scrolling 
-	/*margin-bottom: 0;*/
+	/*margin-bottom: -3%; // turn on when scrolling */
+	margin-bottom: 0;
 }}
 @media (min-width: 1025px) {
 	#_Products #specifications {
 		/*margin-top: 130vh; // turn on when scrolling */
 		margin-top: -8%;
-		margin-bottom: 1%; // turn on when scrolling 
-		/*margin-bottom: 0;*/
+		/*margin-bottom: 1%; // turn on when scrolling */
+		margin-bottom: 0;
 	}
 }
 @media (min-width: 1367px) {
@@ -2313,7 +2314,8 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
-		margin-top: 450px;
+		margin-top: 20vh;
+		margin-bottom: 20vh;
 	}
 }
 @media (max-width: 767px) {
@@ -2478,7 +2480,7 @@ body.skyfull
 
 	#_Products #productDescription.container-fluid {
 		/*margin-top: 150px; // turn back on when using scrollMagic */
-		margin-top: 200px;
+		/*margin-top: 200px;*/
 	}
 
 	#_Products .product-shots.default, 
@@ -2506,7 +2508,7 @@ body.skyfull
 
 @media only screen and (max-width: 1919px) and (min-width: 1367px) and (max-height: 650px) {
 	#_Products #productDescription.container-fluid {
-		margin-top: 200px;
+		/*margin-top: 200px;*/
 	}
 }
 
@@ -2519,8 +2521,8 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
-		margin-top: 600px;
-		margin-bottom: 100px;
+		margin-top: 20vh;
+		margin-bottom: 20vh;
 	}
 }
 
