remove display: none for specs

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2502,7 +2502,7 @@ body.skyfull
 
 @media only screen and (min-width: 768px) and (max-height: 500px) {
 	#_Products #specifications {
-		display: none;
+		/*display: none;*/
 	}
 }
 
