--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2504,6 +2504,17 @@ body.skyfull
 	#_Products #specifications {
 		/*display: none;*/
 	}
+
+	.hide_products,
+	.show_wireframe {
+		margin-top: 30vh;
+	}
+
+	#_Products .product-shots.default,
+	.wireframe_shots,
+	#wf_grid {
+		background-position-y: 20px;
+	}
 }
 
 @media only screen and (max-width: 1919px) and (min-width: 1367px) and (max-height: 650px) {
