--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2283,50 +2283,40 @@ body.skyfull
 #_Products #specifications {
 	min-height: 300px;
 	margin-top: -50px;
-	padding-bottom: 5vh;
+	padding-bottom: 10vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
 	margin-bottom: 0;
 }
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+/*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 #_Products #specifications {
-	/*margin-top: 130vh; // turn on when scrolling */
 	margin-top: -10%;
 	margin-bottom: 0;
 }}
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 #_Products #specifications {
-	/*margin-top: 130vh; // turn on when scrolling */
 	margin-top: -5%;
-	/*margin-bottom: -3%; // turn on when scrolling */
 	margin-bottom: 0;
 }}
 @media (min-width: 1025px) {
 	#_Products #specifications {
-		/*margin-top: 130vh; // turn on when scrolling */
 		margin-top: -8%;
-		/*margin-bottom: 1%; // turn on when scrolling */
 		margin-bottom: 0;
 	}
 }
 @media (min-width: 1367px) {
 	#_Products #specifications {
-		/*margin-top: 130vh; // turn on when scrolling */
 		margin-top: 0;
 		margin-bottom: 0;
-	}
-
-	#_Products #productDescription.container-fluid {
-		margin-top: 20vh;
-		margin-bottom: 20vh;
 	}
 }
 @media (max-width: 767px) {
 	#_Products #specifications {
 		margin-bottom: 5%;
 	}
-}
+}*/
 
 .hide_products,
 .show_wireframe {
