--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2283,11 +2283,11 @@ body.skyfull
 #_Products #specifications {
 	min-height: 300px;
 	margin-top: -50px;
-	padding-bottom: 10vh;
+	padding-bottom: 5vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: 0;
+	margin-bottom: 10vh;
 }
 
 /*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
