about text switches from 3 lines of text to 2 lines of text, reducing height, not allowing scrollMagic to work completely

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1461,6 +1461,7 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
+		min-height: 200px;
 		position: relative;
 		margin-top: 0;
 		margin-bottom: 0;
@@ -2283,11 +2284,11 @@ body.skyfull
 #_Products #specifications {
 	min-height: 300px;
 	margin-top: -50px;
-	padding-bottom: 5vh;
+	padding-bottom: 10vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: 10vh;
+	margin-bottom: 0;
 }
 
 /*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
