#header .title-nav-wrapper

--- a/styles/global.less
+++ b/styles/global.less
@@ -2095,6 +2095,10 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
   margin-top: 110px;
 }
 
+#header .title-nav-wrapper {
+  margin-top: 0 !important;
+}
+
 a.active{
    color: #d3a582 !important; 
 }
