cart button fix

--- a/styles/product.less
+++ b/styles/product.less
@@ -335,9 +335,12 @@ input {
 	}
 
 
-
 .product_item.img-responsive {
 	// background-color: #FBFBFA;
+}
+
+.sqs-cart-dropzone.fixed-cart {
+	margin-top: 90px !important;
 }
 
 @media screen and (max-width: 767px) {
