--- a/styles/product.less
+++ b/styles/product.less
@@ -343,6 +343,10 @@ input {
 	margin-top: 90px !important;
 }
 
+#mobile-swiper {
+		display: none;
+	}
+
 @media screen and (max-width: 767px) {
 	#price-margin {
 	padding-top: 0px;
@@ -516,6 +520,10 @@ input {
 
 	.product-quantity-input>input {
 		margin-left: -10px;
+	}
+
+	#mobile-swiper {
+		display: block;
 	}
 }
 
