.product_item.img-responsive {

--- a/styles/product.less
+++ b/styles/product.less
@@ -347,6 +347,15 @@ input {
 		display: none;
 	}
 
+.product_item.img-responsive {
+	background-color: #FBFBFA;
+}
+
+.product_item.img-responsive:active {
+	background-color: #FBFBFA;
+	border: 1px solid #D3A582;
+}
+
 @media screen and (max-width: 767px) {
 	#price-margin {
 	padding-top: 0px;
