desktop-preview-small

--- a/styles/product.less
+++ b/styles/product.less
@@ -347,11 +347,11 @@ input {
 		display: none;
 	}
 
-.product_item.img-responsive {
+.desktop-preview-small .product_item.img-responsive {
 	background-color: #FBFBFA;
 }
 
-.product_item.img-responsive:active {
+.desktop-preview-small .product_item.img-responsive:active {
 	background-color: #FBFBFA;
 	border: 1px solid #D3A582;
 }
