js to keep active

--- a/styles/product.less
+++ b/styles/product.less
@@ -356,6 +356,11 @@ input {
 	border: 1px solid #D3A582;
 }
 
+.desktop-preview-small .product_item.img-responsive.active {
+	background-color: #FBFBFA;
+	border: 1px solid #D3A582;
+}
+
 @media screen and (max-width: 767px) {
 	#price-margin {
 	padding-top: 0px;
