desktop preview small, and input focus border color

--- a/styles/product.less
+++ b/styles/product.less
@@ -361,6 +361,14 @@ input {
 	border: 1px solid #D3A582;
 }
 
+.desktop-preview-small {
+	margin-top: 40px;
+}
+
+input:focus { 
+   border: 1px solid #D3A582;
+}
+
 @media screen and (max-width: 767px) {
 	#price-margin {
 	padding-top: 0px;
