--- a/styles/product.less
+++ b/styles/product.less
@@ -369,6 +369,12 @@ input:focus {
    border: 1px solid #D3A582;
 }
 
+h1.product-title {
+	font-size: 21px;
+	font-weight: normal;
+	margin-bottom: 20px;
+}
+
 @media screen and (max-width: 767px) {
 	#price-margin {
 	padding-top: 0px;
