-webkit-appearance: none; for safari shadow

--- a/styles/product.less
+++ b/styles/product.less
@@ -367,6 +367,11 @@ input {
 
 input:focus { 
    border: 1px solid #D3A582;
+   -webkit-appearance: none;
+}
+
+input { 
+   -webkit-appearance: none;
 }
 
 h1.product-title {
