height of product item

--- a/styles/product.less
+++ b/styles/product.less
@@ -367,7 +367,6 @@ input {
 
 input:focus { 
    border: 1px solid #D3A582;
-   -webkit-appearance: none;
 }
 
 input { 
@@ -563,7 +562,7 @@ h1.product-title {
 @media screen and (max-width: 480px) {
 
 	.products-hack .col-sm-3 {
-    	height: 280px;
+    	height: 250px;
 	}
 
 	.sqs-add-to-cart-button.sqs-suppress-edit-mode.sqs-editable-button {
@@ -591,6 +590,10 @@ h1.product-title {
 
 	.sqs-money-native {
 		font-size: 14px;
+	}
+
+	#image-count {
+		padding-top: 50px;
 	}
 }
 
