--- a/styles/product.less
+++ b/styles/product.less
@@ -563,6 +563,8 @@ h1.product-title {
 
 	.products-hack .col-sm-3 {
     	height: 250px;
+    	padding-top: 0px;
+    	padding-bottom: 0px;
 	}
 
 	.sqs-add-to-cart-button.sqs-suppress-edit-mode.sqs-editable-button {
