--- a/styles/product.less
+++ b/styles/product.less
@@ -376,7 +376,7 @@ h1.product-title {
 	margin-top:30px;
 	padding-top: 30px;
 	padding-bottom: 0px;
-	margin-left:-10px; 
+	// margin-left:-10px; 
 	margin-top:50px;
 	width: 100%
 	}
@@ -549,9 +549,11 @@ h1.product-title {
 @media screen and (max-width: 480px) {
 
 	.products-hack .col-sm-3 {
-    	height: 250px;
+    	height: 230px;
     	padding-top: 0px;
     	padding-bottom: 0px;
+    	padding-left: 2px;
+    	padding-right: 2px;
 	}
 
 	.sqs-add-to-cart-button.sqs-suppress-edit-mode.sqs-editable-button {
@@ -575,6 +577,7 @@ h1.product-title {
 
 	.product-title-list{
 		font-size: 14px;
+		margin-bottom: 2px;
 	}
 
 	.sqs-money-native {
@@ -585,6 +588,9 @@ h1.product-title {
 		padding-top: 50px;
 	}
 
+	#price-margin {
+		margin-bottom: 10px;
+	}
 
 }
 
