product item alignment

--- a/styles/product.less
+++ b/styles/product.less
@@ -534,11 +534,11 @@ h1.product-title {
 	}
 
 	.quantity-label { 
-		margin-left: -10px;
+		// margin-left: -10px;
 	}
 
 	.product-quantity-input>input {
-		margin-left: -10px;
+		// margin-left: -10px;
 	}
 
 	#mobile-swiper {
@@ -557,7 +557,7 @@ h1.product-title {
 	}
 
 	.sqs-add-to-cart-button.sqs-suppress-edit-mode.sqs-editable-button {
-		width: 290px;
+		width: 250px;
 		margin-left: -25px;
 	}
 
@@ -589,6 +589,11 @@ h1.product-title {
 	}
 
 	#price-margin {
+		margin-bottom: 10px;
+	}
+
+	.item-mobile-header {
+		margin-top: -20px;
 		margin-bottom: 10px;
 	}
 
