--- a/styles/product.less
+++ b/styles/product.less
@@ -343,6 +343,7 @@ input {
 .desktop-preview-small .product_item.img-responsive.active {
 	background-color: #FBFBFA;
 	border: 1px solid #D3A582;
+	width: 100%;
 }
 
 .desktop-preview-small {
