--- a/styles/global.less
+++ b/styles/global.less
@@ -2096,7 +2096,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 }
 
 #header .title-nav-wrapper {
-  margin-top: 0 !important;
+  // margin-top: 0 !important;
 }
 
 a.active{
