add to cart button fix

--- a/styles/product.less
+++ b/styles/product.less
@@ -238,6 +238,13 @@
 	border: 1px solid;
 	border-radius: 30px !important;
 	margin-top: 20px;
+	color: #9f9f9f;
+	padding: 15px 0px 15px 0px;
+	font-size: 15px;
+	font-family: SangBleuBPSans-Light;
+	width: 200px;
+	border-radius: 20px;
+	text-align: center;
 }
 
 body:not(.button-style-default) .sqs-editable-button {
