--- a/styles/product.less
+++ b/styles/product.less
@@ -239,12 +239,13 @@
 	border-radius: 30px !important;
 	margin-top: 20px;
 	color: #9f9f9f;
-	padding: 15px 0px 15px 0px;
+	padding: 10px 0px 10px 0px;
 	font-size: 15px;
 	font-family: SangBleuBPSans-Light;
 	width: 200px;
 	border-radius: 20px;
 	text-align: center;
+	text-transform: uppercase;
 }
 
 body:not(.button-style-default) .sqs-editable-button {
