add to cart entered

--- a/styles/product.less
+++ b/styles/product.less
@@ -503,11 +503,14 @@ h1.product-title {
 
 	.sqs-add-to-cart-button-wrapper {
 		text-align: center;
+		position: relative;
+		left: 50%;
+		margin-left: -170px;
 	}
 
 	.sqs-add-to-cart-button.sqs-suppress-edit-mode.sqs-editable-button {
 		width: 300px;
-		margin-left: -15px;
+		// margin-left: -15px;
 	}
 
 	.shop-viewer {
