--- a/styles/product.less
+++ b/styles/product.less
@@ -609,6 +609,10 @@ h1.product-title {
 		margin-bottom: 10px;
 	}
 
+	.sqs-add-to-cart-button-wrapper {
+		margin-left: -100px;
+	}
+
 }
 
 .product-quantity-input > input {
