--- a/styles/product.less
+++ b/styles/product.less
@@ -657,6 +657,9 @@ h1.product-title {
 
 .sqs-fullpage-shopping-cart-content .checkout-button {
 	padding: 0px !important;
+	background-color: transparent; 
+	font-family: SangBleuBPSans-Light;
+	font-size: 10px;
 }
 
 // body:not(.button-style-default).button-corner-style-square .sqs-editable-button {
