--- a/styles/product.less
+++ b/styles/product.less
@@ -659,7 +659,8 @@ h1.product-title {
 	padding: 0px !important;
 	background-color: transparent; 
 	font-family: SangBleuBPSans-Light;
-	font-size: 10px;
+	font-size: 16px;
+	color: #9f9f9f;
 }
 
 // body:not(.button-style-default).button-corner-style-square .sqs-editable-button {
