--- a/styles/product.less
+++ b/styles/product.less
@@ -653,6 +653,7 @@ h1.product-title {
 	border-radius: 50px;
 	padding-right: 0px;
 	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .sqs-fullpage-shopping-cart-content .checkout-button {
@@ -661,6 +662,7 @@ h1.product-title {
 	font-family: SangBleuBPSans-Light;
 	font-size: 16px;
 	color: #9f9f9f;
+	width: 250px;
 }
 
 // body:not(.button-style-default).button-corner-style-square .sqs-editable-button {
