--- a/styles/product.less
+++ b/styles/product.less
@@ -246,6 +246,7 @@
 	border-radius: 20px;
 	text-align: center;
 	text-transform: uppercase;
+	cursor: pointer;
 }
 
 body:not(.button-style-default) .sqs-editable-button {
