--- a/styles/product.less
+++ b/styles/product.less
@@ -197,6 +197,10 @@
 	font-family: SangBleuBPSans-Light;
 }
 
+.sqs-money-native:after {
+	content: 'USD' !important;
+}
+
 .view-item #productDetails .product-price {
 	font-family: SangBleuBPSans-Light;
 	text-align: left;
