--- a/styles/product.less
+++ b/styles/product.less
@@ -197,7 +197,7 @@
 	font-family: SangBleuBPSans-Light;
 }
 
-.sqs-money-native:after {
+.sqs-money-native:before {
 	content: 'USD' !important;
 }
 
