--- a/styles/product.less
+++ b/styles/product.less
@@ -618,6 +618,10 @@ h1.product-title {
 		margin-left: -120px;
 	}
 
+	.collection-type-products.view-list .product-mark {
+		top: 0px;
+	}
+
 }
 
 .product-quantity-input > input {
