--- a/styles/product.less
+++ b/styles/product.less
@@ -770,7 +770,7 @@ h1.product-title {
 
 .slide-container { display: block; }
 
-.slide {
+.slide-product {
     top: 0;
     opacity: 0;
     // width: 609px;
@@ -783,7 +783,7 @@ h1.product-title {
     transition: all .7s ease-in-out;
 }
 
-.slide img {
+.slide-product img {
     width: 100%;
     height: 100%;
 }
@@ -809,13 +809,13 @@ h1.product-title {
     // text-shadow: 0px 0px 15px rgb(119, 119, 119);
 }
 
-.slide:hover + .nav label { opacity: 0.5; }
+.slide-product:hover + .nav label { opacity: 0.5; }
 
 .nav label:hover { opacity: 1; }
 
 .nav .next { right: 0; }
 
-input:checked + .slide-container  .slide {
+input:checked + .slide-container  .slide-product {
     opacity: 1;
 
     transform: scale(1);
