--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2041,7 +2041,7 @@ body.skyfull
 			left: 0;
 			top: -3%;
 			position: absolute;
-			background-size: 90%;
+			background-size: contain;
 			background-position: -10vw -5vh;
 		}
 	}
@@ -2055,7 +2055,7 @@ body.skyfull
 			left: 0;
 			top: -3%;
 			position: absolute;
-			background-size: 90%;
+			background-size: contain;
 			background-position-x: -10vw;
 		}
 	}
@@ -2080,7 +2080,7 @@ body.skyfull
 			background-position: -5vw 40%;
 			/*background-position-x: -5vw;*/
 			/*background-position-y: 40%;*/
-			background-size: 70%;
+			background-size: contain;
 			margin-bottom: 0;
 			position: absolute;
 			left: 0;
@@ -2103,7 +2103,7 @@ body.skyfull
 			margin-top: 0;
 		}
 		@media (min-width: 1200px) {
-			margin-top: -35%;
+			// margin-top: -35%;
 		}
 	}
 
