okay, clump text in 1 div, reduce margins with required min height

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1461,7 +1461,7 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
-		min-height: 200px;
+		min-height: 50vh;
 		position: relative;
 		margin-top: 0;
 		margin-bottom: 0;
@@ -1469,7 +1469,7 @@ body.skyfull
 		/*margin-bottom: 30px;*/
 		@media (min-width: 768px) {
 			margin-top: 45vh;
-			margin-bottom: 8vh;
+			/*margin-bottom: 8vh;*/
 		}
 	}
 
@@ -2283,12 +2283,12 @@ body.skyfull
 /* --------------------------------------------------- Test ---------------------------------------------------------- */
 #_Products #specifications {
 	min-height: 300px;
-	margin-top: -50px;
+	margin-top: 0px;
 	padding-bottom: 10vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: 0;
+	margin-bottom: -5%;
 }
 
 /*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -2490,7 +2490,7 @@ body.skyfull
 	}
 
 	#_Products #specifications {
-		margin-bottom: -3%; // turn on when scrolling 
+		margin-bottom: -5%;
 		/*margin-bottom: 0%;*/
 	}
 }
@@ -2528,7 +2528,7 @@ body.skyfull
 
 	#_Products #productDescription.container-fluid {
 		margin-top: 45vh;
-		margin-bottom: 8vh;
+		/*margin-bottom: 8vh;*/
 	}
 }
 
