--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2423,7 +2423,7 @@ body.skyfull
 	}
 }
 
-@media (min-width: 768px) and (max-height: 950px) {
+@media only screen and (min-width: 768px) and (max-height: 950px) {
 	#_Products .title {
 		font-size: 21px;
 	}
@@ -2439,7 +2439,7 @@ body.skyfull
 
 }
 
-@media (min-width: 768px) and (max-height: 599px) {
+@media only screen and (min-width: 768px) and (max-height: 599px) {
 	#_Products .title {
 		font-size: 14px;
 	}
@@ -2512,7 +2512,7 @@ body.skyfull
 	}
 }
 
-@media only screen and (max-width: 1919px) and (min-width: 1367px) and (max-height: 650px) {
+@media only screen and (max-width: 1919px) and (min-width: 1367px) and (max-height: 599px) {
 	#_Products #productDescription.container-fluid {
 		/*margin-top: 200px;*/
 	}
