--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2423,7 +2423,7 @@ body.skyfull
 	}
 }
 
-@media only screen and (min-width: 768px) and (max-height: 950px) {
+@media only screen and (max-height: 950px) {
 	#_Products .title {
 		font-size: 21px;
 	}
@@ -2439,7 +2439,7 @@ body.skyfull
 
 }
 
-@media only screen and (min-width: 768px) and (max-height: 599px) {
+@media only screen and (max-height: 599px) {
 	#_Products .title {
 		font-size: 14px;
 	}
