oh it was my cache, shit was fine

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2307,17 +2307,16 @@ body.skyfull
 		margin-bottom: 0;
 	}
 }
-@media (min-width: 1367px) {
-	#_Products #specifications {
-		margin-top: 0;
-		margin-bottom: 0;
-	}
-}
 @media (max-width: 767px) {
 	#_Products #specifications {
 		margin-bottom: 5%;
 	}
 }*/
+@media (min-width: 1367px) {
+	#_Products #specifications {
+		margin-top: 60px;
+	}
+}
 
 .hide_products,
 .show_wireframe {
@@ -2423,7 +2422,7 @@ body.skyfull
 	}
 }
 
-@media only screen and (max-height: 950px) {
+@media only screen (min-width: 768px) and (max-height: 950px) {
 	#_Products .title {
 		font-size: 21px;
 	}
@@ -2439,7 +2438,7 @@ body.skyfull
 
 }
 
-@media only screen and (max-height: 599px) {
+@media only screen (min-width: 768px) and (max-height: 599px) {
 	#_Products .title {
 		font-size: 14px;
 	}
