--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2329,7 +2329,7 @@ body.skyfull
 	@media only screen and (max-width: 767px) and (orientation: landscape) {
 		margin-top: 0;
 	}
-	@media (min-width: 768px) {
+	@media only screen and (min-width: 768px) and (max-width: 991px) {
 		position: absolute;
 		overflow: hidden;
 		z-index: 0;
@@ -2338,7 +2338,18 @@ body.skyfull
 		/*width: 50%;*/
 		width: 100%;
 		height: 50vh;
-		margin-top: 20vh;
+		margin-top: 40vh;
+	}
+	@media only screen and (min-width: 992px) {
+		position: absolute;
+		overflow: hidden;
+		z-index: 0;
+		/*margin-left: 25%;*/
+		/*margin-right: 25%;*/
+		/*width: 50%;*/
+		width: 100%;
+		height: 50vh;
+		margin-top: 25vh;
 	}
 }
 
@@ -2435,7 +2446,6 @@ body.skyfull
 	#_Products .product_title_gap {
 		margin-top: 0;
 	}
-
 }
 
 @media only screen (min-width: 768px) and (max-height: 599px) {
