--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2283,12 +2283,12 @@ body.skyfull
 /* --------------------------------------------------- Test ---------------------------------------------------------- */
 #_Products #specifications {
 	min-height: 300px;
-	margin-top: 0px;
+	margin-top: 50px;
 	padding-bottom: 10vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: -5%;
+	margin-bottom: -2%;
 }
 
 /*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -2314,7 +2314,8 @@ body.skyfull
 }*/
 @media (min-width: 1367px) {
 	#_Products #specifications {
-		margin-top: 60px;
+		/*margin-top: 60px;*/
+		margin-bottom: -5%;
 	}
 }
 
@@ -2499,7 +2500,7 @@ body.skyfull
 	}
 
 	#_Products #specifications {
-		margin-bottom: -5%;
+		margin-bottom: -2%;
 		/*margin-bottom: 0%;*/
 	}
 }
