--- a/styles/product.less
+++ b/styles/product.less
@@ -646,6 +646,12 @@ h1.product-title {
 	border-radius: 20px;
 	width: 70px;
 	padding-left: 15px;
+	padding: 2px 10px !important;
+}
+
+.sqs-fullpage-shopping-cart-content .cart-container table tr .item-desc a {
+	font-size: 16px;
+	font-family: SangBleuBPSans-Light !important;
 }
 
 .showcart-hack h2 {
