--- a/styles/product.less
+++ b/styles/product.less
@@ -711,7 +711,11 @@ h1.product-title {
 .sqs-fullpage-shopping-cart-content .cart-container .subtotal .label {
 	font-family: underground-pro-light;
 	color: #9f9f9f;
-	font-size: 14px;
+	font-size: 16px !important;
+}
+
+td#yui_3_17_2_1_1448533541836_374.price {
+	padding-right: 30px;
 }
 
 .sqs-fullpage-shopping-cart-content .cart-container .subtotal {
