--- a/styles/product.less
+++ b/styles/product.less
@@ -675,7 +675,7 @@ h1.product-title {
 	padding: 0px !important;
 	background-color: transparent; 
 	font-family: SangBleuBPSans-Light;
-	font-size: 16px;
+	font-size: 16px !important;
 	color: #9f9f9f;
 	width: 250px;
 }
