--- a/styles/product.less
+++ b/styles/product.less
@@ -641,6 +641,10 @@ h1.product-title {
 
 //checkout
 
+.sqs-pill-shopping-cart-content {
+	display: none;
+}
+
 .sqs-fullpage-shopping-cart-content .cart-container table tr .quantity input {
 	text-align: left;
 	border-radius: 20px;
