--- a/styles/product.less
+++ b/styles/product.less
@@ -641,6 +641,10 @@ h1.product-title {
 
 //checkout
 
+.products-hack .sqs-pill-shopping-cart-content {
+	display: block;
+}
+
 .sqs-pill-shopping-cart-content {
 	display: none;
 }
