new store banner image, currency to $, real text

--- a/styles/product.less
+++ b/styles/product.less
@@ -197,9 +197,9 @@
 	font-family: SangBleuBPSans-Light;
 }
 
-.sqs-money-native:before {
-	content: 'USD ' !important;
-}
+// .sqs-money-native:before {
+// 	content: 'USD ' !important;
+// }
 
 .view-item #productDetails .product-price {
 	font-family: SangBleuBPSans-Light;
@@ -211,7 +211,7 @@
 
 .original-price {
 	text-decoration: line-through;
-	display: none;
+	// display: none;
 }
 
 #backtoshop h1 a {
