--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1468,8 +1468,14 @@ body.skyfull
 		/*margin-top: 20px;*/
 		/*margin-bottom: 30px;*/
 		@media (min-width: 768px) {
-			margin-top: 40vh;
+			margin-top: 30vh;
 			/*margin-bottom: 8vh;*/
+		}
+		@media (min-width: 992px) {
+			margin-top: 35vh;
+		}
+		@media (min-width: 1200px) {
+			margin-top: 40vh;
 		}
 	}
 
@@ -2537,7 +2543,7 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
-		margin-top: 40vh;
+		/*margin-top: 40vh;*/
 		/*margin-bottom: 8vh;*/
 	}
 }
