--- a/styles/product.less
+++ b/styles/product.less
@@ -187,7 +187,7 @@
 }
 
 .view-item #productDetails {
-	// margin-top: 100px;
+	margin-top: 150px;
 }
 
 .sqs-money-native {
@@ -281,7 +281,7 @@ input {
 }
 
 .select-color {
-	margin-top: 30px;
+	margin-top: 100px;
 }
 
 // .title-desc-wrapper.has-main-image {
@@ -377,11 +377,16 @@ h1.product-title {
 	margin-bottom: 20px;
 }
 
+.products-hack a:hover {
+	color: #9f9f9f;
+}
+
 @media screen and (max-width: 767px) {
 	#price-margin {
 	padding-top: 0px;
 	margin-top: 0px;
-	margin-bottom: 20px;
+	margin-bottom: 5px;
+	margin-left: 15px;
 	}
 
 	#product-grid {
