--- a/styles/product.less
+++ b/styles/product.less
@@ -378,7 +378,11 @@ h1.product-title {
 }
 
 .products-hack a:hover {
-	color: #9f9f9f;
+	color: #888;
+}
+
+.products-hack a {
+	color: #888;
 }
 
 @media screen and (max-width: 767px) {
