--- a/styles/product.less
+++ b/styles/product.less
@@ -411,6 +411,7 @@ h1.product-title {
 	.product-price {
 	text-align: left;
 	padding-left: 15px;
+	margin-top: -15px;
 	}
 
 	.product-title-list{
@@ -569,6 +570,10 @@ h1.product-title {
 
 	#mobile-swiper {
 		display: block;
+	}
+
+	.view-item #productDetails {
+	margin-top: 0px;
 	}
 }
 
