store-header-text

--- a/styles/product.less
+++ b/styles/product.less
@@ -26,6 +26,10 @@
 	margin-left: 15px;
 }
 
+.store-header-text {
+	margin-bottom: 50px;
+}
+
 .store-header-text h1 {
 	font-size: 1.4em !important;
 	font-weight: normal;
