product price margin

--- a/styles/product.less
+++ b/styles/product.less
@@ -27,7 +27,7 @@
 }
 
 .store-header-text {
-	margin-bottom: 50px;
+	margin-bottom: 40px;
 }
 
 .store-header-text h1 {
@@ -414,8 +414,8 @@ h1.product-title {
 
 	.product-price {
 	text-align: left;
-	padding-left: 15px;
-	margin-top: -15px;
+	// padding-left: 15px;
+	// margin-top: -15px;
 	}
 
 	.product-title-list{
