--- a/styles/product.less
+++ b/styles/product.less
@@ -414,7 +414,7 @@ h1.product-title {
 
 	.product-price {
 	text-align: left;
-	// padding-left: 15px;
+	padding-left: 15px;
 	// margin-top: -15px;
 	}
 
@@ -936,7 +936,7 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
     display: block;
     position: absolute;
 
-    transform: scale(0);
+    transform: scale(1);
 
     transition: all .7s ease-in-out;
 }
