--- a/styles/product.less
+++ b/styles/product.less
@@ -640,6 +640,11 @@ h1.product-title {
 		top: 0px;
 	}
 
+	.product-price {
+		text-align: left;
+		padding-left: 0px;
+	}
+
 }
 
 .product-quantity-input > input {
