product price padding

--- a/styles/product.less
+++ b/styles/product.less
@@ -414,7 +414,7 @@ h1.product-title {
 
 	.product-price {
 	text-align: left;
-	padding-left: 15px;
+	// padding-left: 15px;
 	// margin-top: -15px;
 	}
 
