--- a/styles/product.less
+++ b/styles/product.less
@@ -418,6 +418,10 @@ h1.product-title {
 	// margin-top: -15px;
 	}
 
+	.item-mobile-header .product-price {
+		padding-left: 15px;
+	}
+
 	.product-title-list{
 		font-size: 20px;
 	}
