--- a/styles/product.less
+++ b/styles/product.less
@@ -713,6 +713,7 @@ h1.product-title {
 	font-size: 16px !important;
 	color: #9f9f9f;
 	width: 250px;
+	margin: 15px 0;
 }
 
 // body:not(.button-style-default).button-corner-style-square .sqs-editable-button {
