--- a/styles/product.less
+++ b/styles/product.less
@@ -649,6 +649,13 @@ h1.product-title {
 		padding-left: 0px;
 	}
 
+	.sm-facebook-logo,
+  	.sm-instagram-logo,
+  	.sm-twitter-logo {
+    	margin-right: 5px;
+    	width: 24px;
+  }
+
 }
 
 .product-quantity-input > input {
