--- a/styles/global.less
+++ b/styles/global.less
@@ -2241,6 +2241,7 @@ span.archive-dropdown-toggle-title {
   .sm-instagram-logo,
   .sm-twitter-logo {
     margin-right: 5px;
+    width: 34px;
   }
 }
 
