--- a/styles/product.less
+++ b/styles/product.less
@@ -654,7 +654,11 @@ h1.product-title {
   	.sm-twitter-logo {
     	margin-right: 5px;
     	width: 24px;
-  }
+  	}
+
+  	footer .footer-wrapper #socialBadges {
+  		margin-bottom: -15px;
+  	}
 
 }
 
