image / text relative and float after another fix buttons instead

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1057,13 +1057,15 @@ body.skyfull
 		left: 0px;*/
 		width: 100%;
 		z-index: 1000;
-		position: relative;
+		/*position: relative;*/
+		position: absolute;
 		bottom: 80px;
 	}
 
 	#_Products #productContainer.container-fluid
 	{
-		position: absolute;
+		/*position: absolute;*/
+		position: relative;
 		top: 0px;
 		left: 0px;
 		width: 100%;
@@ -1456,7 +1458,8 @@ body.skyfull
 	}
 
 	#_Products #productSelectContainer.container-fluid {
-		position: relative;
+		/*position: relative;*/
+		position: absolute;
 		margin-top: 45vh;
 	}
 
@@ -1468,14 +1471,14 @@ body.skyfull
 		/*margin-top: 20px;*/
 		/*margin-bottom: 30px;*/
 		@media (min-width: 768px) {
-			margin-top: 30vh;
+			/*margin-top: 30vh;*/
 			/*margin-bottom: 8vh;*/
 		}
 		@media (min-width: 1367px) {
-			margin-top: 35vh;
+			/*margin-top: 35vh;*/
 		}
 		@media (min-width: 1600px) {
-			margin-top: 40vh;
+			/*margin-top: 40vh;*/
 		}
 	}
 
@@ -1747,7 +1750,8 @@ body.skyfull
 		}
 
 		#_Products #productSelectContainer.container-fluid {
-			position: relative;
+			/*position: relative;*/
+			position: absolute;
 			top: 0;
 			margin-top: 80px;
 		}
@@ -2246,14 +2250,16 @@ body.skyfull
 		}
 
 		#_Products #productSelectContainer.container-fluid {
-			position: relative;
+			/*position: relative;*/
+			position: absolute;
 			&.fixed {
 				position: fixed;
 			}
 		}
 
 		#_Products #productContainer.container-fluid {
-			position: absolute;
+			/*position: absolute;*/
+			position: relative;
 			&.fixed {
 				position: fixed;
 			}
@@ -2337,7 +2343,8 @@ body.skyfull
 		margin-top: 0;
 	}
 	@media only screen and (min-width: 768px) and (max-width: 991px) {
-		position: absolute;
+		/*position: absolute;*/
+		position: relative;
 		overflow: hidden;
 		z-index: 0;
 		/*margin-left: 25%;*/
@@ -2348,7 +2355,8 @@ body.skyfull
 		margin-top: 40vh;
 	}
 	@media only screen and (min-width: 992px) {
-		position: absolute;
+		/*position: absolute;*/
+		position: relative;
 		overflow: hidden;
 		z-index: 0;
 		/*margin-left: 25%;*/
