--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1166,7 +1166,8 @@ body.skyfull
 
 		#_Products #productSelectContainer.container-fluid
 		{
-			margin-top: 45vh;
+			/*margin-top: 45vh;*/
+			margin-top: 0;
 			position: relative;
 		}
 
@@ -1681,7 +1682,8 @@ body.skyfull
 	@media (min-width: 481px) and (max-width: 768px) {
 		#_Products #productSelectContainer.container-fluid {
 			position: relative;
-			margin-top: 57vh;
+			/*margin-top: 57vh;*/
+			margin-top: 0;
 		}
 
 		#_Products {
@@ -2327,7 +2329,7 @@ body.skyfull
 @media (min-width: 1367px) {
 	#_Products #specifications {
 		/*margin-top: 60px;*/
-		margin-bottom: -5%;
+		margin-bottom: 0%;
 	}
 }
 
