--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2297,12 +2297,12 @@ body.skyfull
 /* --------------------------------------------------- Test ---------------------------------------------------------- */
 #_Products #specifications {
 	min-height: 300px;
-	margin-top: 50px;
+	margin-top: 0;
 	padding-bottom: 10vh;
 	margin-left: 15px;
 	margin-right: 15px;
 	display: block;
-	margin-bottom: -2%;
+	margin-bottom: -5%;
 }
 
 /*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
