--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -1465,7 +1465,7 @@ body.skyfull
 	}
 
 	#_Products #productDescription.container-fluid {
-		min-height: 50vh;
+		/*min-height: 50vh;*/
 		position: relative;
 		margin-top: 0;
 		margin-bottom: 0;
@@ -1698,7 +1698,7 @@ body.skyfull
 
 	@media (min-width: 600px) and (max-width: 768px) {
 		#_Products #productDescription.container-fluid {
-			bottom: 40px;
+			/*bottom: 40px;*/
 			position: relative;
 			/*margin-top: 60px;*/
 		}
