style for product specs

--- a/styles/product.less
+++ b/styles/product.less
@@ -1143,5 +1143,16 @@ input[type="radio"] {
     border: 1px solid #d2a67e;
 }
 
-
+.product-description {
+  h2 {
+    line-height: 1.2em;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: 600;
+    font-style: normal;
+    font-family: sangbleubpsans-light !important;
+    color: #9f9f9f !important
+  }
+}
 
