style for product specs li

--- a/styles/product.less
+++ b/styles/product.less
@@ -1154,5 +1154,15 @@ input[type="radio"] {
     font-family: sangbleubpsans-light !important;
     color: #9f9f9f !important
   }
+
+  ul {
+    li {
+      font-family: underground-pro-light;
+      font-size: 14px;
+      color: #888;
+      line-height: 22px
+    }
+  }
+
 }
 
