--- a/styles/product.less
+++ b/styles/product.less
@@ -1166,3 +1166,15 @@ input[type="radio"] {
 
 }
 
+.desktop-preview-small {
+  > div {
+    height: 120px !important;
+
+    img {
+      height: 100% !important;
+      width: auto !important;
+      max-width: auto !important;
+    }
+  }
+}
+
