css hack for slider desktop thumbnail

--- a/styles/product.less
+++ b/styles/product.less
@@ -1167,13 +1167,15 @@ input[type="radio"] {
 }
 
 .desktop-preview-small {
-  > div {
-    height: 120px !important;
+  label {
+    div {
+      height: 120px !important;
 
-    img {
-      height: 100% !important;
-      width: auto !important;
-      max-width: auto !important;
+      img {
+        height: 100% !important;
+        width: auto !important;
+        max-width: auto !important;
+      }
     }
   }
 }
