use box shadow instead of border

--- a/styles/product.less
+++ b/styles/product.less
@@ -359,8 +359,12 @@ input {
 
 .desktop-preview-small .product_item.img-responsive.active {
 	background-color: #FBFBFA;
-	border: 1px solid #D3A582;
+	
 	width: 100%;
+
+  -webkit-box-shadow: inset 0px 0px 0px 1px #D3A582;
+  -moz-box-shadow: inset 0px 0px 0px 1px #D3A582;
+  box-shadow: inset 0px 0px 0px 1px #D3A582;
 }
 
 .desktop-preview-small {
