--- a/styles/product.less
+++ b/styles/product.less
@@ -354,7 +354,7 @@ input {
 
 .desktop-preview-small .product_item.img-responsive:active {
 	background-color: #FBFBFA;
-	border: 1px solid #D3A582;
+	//border: 1px solid #D3A582;
 }
 
 .desktop-preview-small .product_item.img-responsive.active {
