--- a/styles/product.less
+++ b/styles/product.less
@@ -362,9 +362,9 @@ input {
 	
 	width: 100%;
 
-  -webkit-box-shadow: inset 0px 0px 0px 1px #D3A582;
-  -moz-box-shadow: inset 0px 0px 0px 1px #D3A582;
-  box-shadow: inset 0px 0px 0px 1px #D3A582;
+  -webkit-box-shadow: 0px 0px 0px 1px #D3A582;
+  -moz-box-shadow: 0px 0px 0px 1px #D3A582;
+  box-shadow: 0px 0px 0px 1px #D3A582;
 }
 
 .desktop-preview-small {
