--- a/styles/product.less
+++ b/styles/product.less
@@ -368,7 +368,7 @@ input {
 }
 
 .desktop-preview-small {
-	margin-top: 40px;
+	//margin-top: 40px;
 }
 
 input:focus { 
@@ -1170,17 +1170,19 @@ input[type="radio"] {
 
 }
 
-.desktop-preview-small {
-  label {
-    div {
-      height: 120px !important;
+#desktop-slider-thumbnails-container {
+  margin-top: 40px;
+  .desktop-preview-small {
+    label {
+      div {
+        height: 120px !important;
 
-      img {
-        height: 100% !important;
-        width: auto !important;
-        max-width: auto !important;
+        img {
+          height: 100% !important;
+          width: auto !important;
+          max-width: auto !important;
+        }
       }
     }
   }
 }
-
