--- a/styles/product.less
+++ b/styles/product.less
@@ -932,7 +932,7 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
     // width: 609px;
     // height: 420px;
     width: 60vw;
-    height: 40vh;
+    // height: 40vh;
     display: block;
    	margin-left: 15px; 
     // margin: 0 auto;
