--- a/styles/product.less
+++ b/styles/product.less
@@ -969,7 +969,8 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
 
 .slide-desktop img {
     max-width: 100%;
-    max-height: 400px;
+    //max-height: 400px;
+    height: 400px;
 }
 
 .nav-desktop label {
