--- a/styles/product.less
+++ b/styles/product.less
@@ -938,6 +938,8 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
     // margin: 0 auto;
     position: relative;
     // background-color: #FBFBFA;
+    height: 400px;
+    width: 100%;
 }
 
 .slides-desktop * {
