--- a/styles/product.less
+++ b/styles/product.less
@@ -955,11 +955,11 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
 
 .slide-desktop {
     top: 0;
-    //opacity: 0;
-    display: none;
+    opacity: 0;
+    //display: none;
     // width: 609px;
     // height: 420px;
-    //display: block;
+    display: block;
     //position: absolute;
 
     transform: scale(1);
@@ -1004,8 +1004,8 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
 .nav-desktop .next { right: 0; }
 
 input:checked + .slide-container-desktop  .slide-desktop {
-    //opacity: 1;
-    display: block;
+    opacity: 1;
+    //display: block;
 
     transform: scale(1);
 
