--- a/styles/product.less
+++ b/styles/product.less
@@ -951,7 +951,7 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
 
 .slides-desktop input { display: none; }
 
-.slide-container-desktop { display: block; }
+.slide-container-desktop { display: block; position: absolute;}
 
 .slide-desktop {
     top: 0;
