--- a/styles/product.less
+++ b/styles/product.less
@@ -1180,7 +1180,7 @@ input[type="radio"] {
 }
 
 #desktop-slider-thumbnails-container {
-  margin-top: 40px;
+  //margin-top: 40px;
   .desktop-preview-small {
     label {
       div {
