--- a/styles/product.less
+++ b/styles/product.less
@@ -352,15 +352,18 @@ input {
 	background-color: #FBFBFA;
 }
 
-.desktop-preview-small .product_item.img-responsive:active {
+.desktop-preview-small:active {
 	background-color: #FBFBFA;
-	//border: 1px solid #D3A582;
+  padding: 0px;
+
+  -webkit-box-shadow: 0px 0px 0px 1px #D3A582;
+  -moz-box-shadow: 0px 0px 0px 1px #D3A582;
+  box-shadow: 0px 0px 0px 1px #D3A582;
 }
 
-.desktop-preview-small .product_item.img-responsive.active {
+.desktop-preview-small.active {
 	background-color: #FBFBFA;
-	
-	width: 100%;
+  padding: 0px;
 
   -webkit-box-shadow: 0px 0px 0px 1px #D3A582;
   -moz-box-shadow: 0px 0px 0px 1px #D3A582;
