--- a/styles/product.less
+++ b/styles/product.less
@@ -356,18 +356,18 @@ input {
 	background-color: #FBFBFA;
   padding: 0px;
 
-  -webkit-box-shadow: 0px 0px 0px 1px #D3A582;
-  -moz-box-shadow: 0px 0px 0px 1px #D3A582;
-  box-shadow: 0px 0px 0px 1px #D3A582;
+  -webkit-box-shadow: inset 0px 0px 0px 1px #D3A582;
+  -moz-box-shadow: inset 0px 0px 0px 1px #D3A582;
+  box-shadow: inset 0px 0px 0px 1px #D3A582;
 }
 
 .desktop-preview-small.active {
 	background-color: #FBFBFA;
   padding: 0px;
 
-  -webkit-box-shadow: 0px 0px 0px 1px #D3A582;
-  -moz-box-shadow: 0px 0px 0px 1px #D3A582;
-  box-shadow: 0px 0px 0px 1px #D3A582;
+  -webkit-box-shadow: inset 0px 0px 0px 1px #D3A582;
+  -moz-box-shadow: inset 0px 0px 0px 1px #D3A582;
+  box-shadow: inset 0px 0px 0px 1px #D3A582;
 }
 
 .desktop-preview-small {
