--- a/styles/product.less
+++ b/styles/product.less
@@ -370,7 +370,7 @@ input {
   box-shadow: 0px 0px 0px 1px #D3A582;
 }
 
-.desktop-preview-small.active {
+.desktop-preview-small {
   background-color: #FBFBFA;
   padding: 0px;
 
