--- a/styles/product.less
+++ b/styles/product.less
@@ -377,6 +377,8 @@ input {
   -webkit-box-shadow: 0px 0px 0px 1px #FFF;
   -moz-box-shadow: 0px 0px 0px 1px #FFF;
   box-shadow: 0px 0px 0px 1px #FFF;
+
+  margin-right: 2px;
 }
 
 .desktop-preview-small {
@@ -1157,7 +1159,7 @@ input[type="radio"] {
     padding: 10px 0;
 }
 .gallery-thumbs .swiper-slide {
-    width: 25%;
+    width: 24%;
     height: 100%;
     opacity: 1;
     background-color: #FBFBFA;
