--- a/styles/product.less
+++ b/styles/product.less
@@ -352,7 +352,7 @@ input {
 	background-color: #FBFBFA;
 }
 
-.desktop-preview-small:active {
+.desktop-preview-small .desktop-slider-thumbnails-holder:active {
 	background-color: #FBFBFA;
   
 
@@ -361,7 +361,7 @@ input {
   box-shadow: 0px 0px 0px 1px #D3A582;
 }
 
-.desktop-preview-small.active {
+.desktop-preview-small .desktop-slider-thumbnails-holder.active {
 	background-color: #FBFBFA;
   
 
@@ -370,7 +370,7 @@ input {
   box-shadow: 0px 0px 0px 1px #D3A582;
 }
 
-.desktop-preview-small {
+.desktop-preview-small .desktop-slider-thumbnails-holder {
   background-color: #FBFBFA;
   
 
