--- a/styles/product.less
+++ b/styles/product.less
@@ -377,6 +377,9 @@ input {
   -webkit-box-shadow: 0px 0px 0px 1px #FFF;
   -moz-box-shadow: 0px 0px 0px 1px #FFF;
   box-shadow: 0px 0px 0px 1px #FFF;
+
+
+  height: 80px;
 }
 
 .desktop-preview-small {
@@ -627,7 +630,7 @@ h1.product-title {
 	}
 
 	.slides-desktop {
-		height: 40vh !important;
+		//height: 40vh !important;
 	}
 
 	.product-title-list{
@@ -951,7 +954,7 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
     position: relative;
     // background-color: #FBFBFA;
 
-    height: 500px;
+    height: 450px;
     width: 100%;
 }
 
@@ -981,7 +984,7 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
 
     transition: all .7s ease-in-out;
 
-    height: 500px;
+    height: 450px;
     width: 100%;
 }
 
