--- a/styles/product.less
+++ b/styles/product.less
@@ -1210,3 +1210,11 @@ input[type="radio"] {
     }
   }
 }
+
+
+@media screen and (max-width: 374px) {
+  .sqs-fullpage-shopping-cart-content .cart-container table tr .item-image img {
+    max-width: 100%;
+  }
+
+}
