--- a/styles/product.less
+++ b/styles/product.less
@@ -1214,7 +1214,11 @@ input[type="radio"] {
 
 @media screen and (max-width: 374px) {
   .sqs-fullpage-shopping-cart-content .cart-container table tr .item-image img {
-    max-width: 100%;
+    width: 100%;
+  }
+
+  .sqs-money-native {
+    font-size: 12px;
   }
 
 }
