--- a/styles/product.less
+++ b/styles/product.less
@@ -1217,7 +1217,7 @@ input[type="radio"] {
     width: 100%;
   }
 
-  .sqs-money-native {
+  .sqs-money-native, .item-desc {
     font-size: 12px;
   }
 
