--- a/styles/product.less
+++ b/styles/product.less
@@ -1217,8 +1217,8 @@ input[type="radio"] {
     width: 100%;
   }
 
-  .sqs-money-native, .item-desc {
-    font-size: 12px;
+  .sqs-money-native, .item-desc, .sqs-fullpage-shopping-cart-content .cart-container table tr .item-desc a {
+    font-size: 12px !important;
   }
 
 }
