position for quantity in cart

--- a/styles/product.less
+++ b/styles/product.less
@@ -711,7 +711,7 @@ h1.product-title {
 	border-radius: 20px;
 	width: 70px;
 	padding-left: 15px;
-	padding: 5px 10px !important;
+	padding: 5px 10px 2px !important
 }
 
 .sqs-fullpage-shopping-cart-content .cart-container table tr .item-desc a {
