disable extra margin around specs and warranty

--- a/styles/skyfull.less
+++ b/styles/skyfull.less
@@ -2299,8 +2299,8 @@ body.skyfull
 	min-height: 300px;
 	margin-top: 0;
 	padding-bottom: 10vh;
-	margin-left: 15px;
-	margin-right: 15px;
+	//	margin-left: 15px;
+	// margin-right: 15px;
 	display: block;
 	margin-bottom: -5%;
 }
