also use #id_header as head image

--- a/styles/addon.less
+++ b/styles/addon.less
@@ -79,7 +79,7 @@ footer {
 		// }
 	}
 
-	#id_intro, #id_intro-x {
+	#id_intro, #id_intro-x, #id_header {
 		height: 580px !important;
 		margin-bottom: -5px;
 
