fix margin right on id_header

--- a/styles/addon.less
+++ b/styles/addon.less
@@ -82,7 +82,7 @@ footer {
 	#id_intro, #id_intro-x, #id_header {
 		height: 580px !important;
 		margin-bottom: -5px;
-
+		margin-right: 5px;
 		.title-desc-wrapper.over-image.has-main-image, .title-desc-wrapper.over-image.no-main-image {
 			margin-top: 5px;
 			height: 570px !important;
