fixing some stupid Henrik pixels

--- a/styles/product.less
+++ b/styles/product.less
@@ -347,7 +347,12 @@ input {
 
 #mobile-swiper {
 		display: none;
-	}
+}
+
+#product_item_header {
+  // margin-top: 200px;
+  margin-left: 0px !important;
+}
 
 .desktop-preview-small .product_item.img-responsive {
 	background-color: #FBFBFA;
